--- a/website.html
+++ b/website.html
@@ -1,11 +1,40 @@
-<p>
-  paragraph of text
-</p>
+<!DOCTYPE html>
+<html lang="en">
 
-<button>
-  Hello
-</button>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    h1 {
+      background-color: lightgrey;
+      color: blue;
+      text-align: center;
+      text-decoration-line: overline underline;
+      text-transform: capitalize;
+      text-shadow: 2px 2px;
+    }
+    img{
+      width: 150px;
+    }
+  </style>
+</head>
 
-<a href="https://www.youtube.com/" target="blank">
-  Link to YouTube
-</a>
+<body>
+  <p>
+    paragraph of text
+  </p>
+
+  <button>
+    Hello
+  </button>
+
+  <a href="https://www.youtube.com/" target="blank">
+    Link to YouTube
+  </a>
+  <h1>Hello Hackers</h1>
+  <img src="/joan-gamell-ZS67i1HLllo-unsplash.jpg" alt="alternatetext">
+</body>
+
+</html>
